# XOSCompiler

./: CMakeLists.txt  README.md  compile.ps1  config_crossx.txt  crossx.c  crossx.ps1  filterImg.cpp  libTest.py  makeCrossX.ps1  requirements.txt  run.sh  testcpp.cpp
src/: compile.ps1  crossx.c  crossx.ps1
test_scripts/: filterImg.cpp  testc.c
